--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="header">
+      <div class="toplinks">
       <ul class="left-links">
         <li><a href="#">About</a></li>
         <li><a href="#">Store</a></li>
@@ -18,16 +19,22 @@
         <li><a href="#">Settings</a></li>
       </ul>
     </div>
+  </div>
+
     <div class="content">
+      <div class="loginput">
       <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
       <div class="input">
         <input type="text">
       </div>
+    </div>
       <div class="buttons">
         <button>Do the thing!</button>
         <button>Do the other thing!</button>
       </div>
     </div>
+    
+    <div class="footcont">
     <div class="footer">
       <ul class="left-links">
         <li><a href="#">Advertising</a></li>
@@ -38,5 +45,7 @@
         <li><a href="#">Terms</a></li>
       </ul>
     </div>
+  </div>
+  
   </body>
 </html>
